--- a/index.html
+++ b/index.html
@@ -877,7 +877,8 @@ Scroll down to view the complete specifications and features!</p>
         <section class="download-section">
         <h2>Download Our Rental App</h2>
         <div class="download-buttons">
-            <a href="#" class="download-button android">
+           <a href="https://play.google.com/store/apps/details?id=com.rhyno.ev.rhynoEvRentals.com" 
+   target="_blank" class="download-button android">
                 <img src="https://th.bing.com/th/id/OIP.n6T1jXE0AKTlhV-ITyergQHaGq?rs=1&pid=ImgDetMain" alt="Android" width="45">
                 <span>Download for Android</span>
             </a>
