--- a/index.html
+++ b/index.html
@@ -882,7 +882,8 @@ Scroll down to view the complete specifications and features!</p>
                 <img src="https://th.bing.com/th/id/OIP.n6T1jXE0AKTlhV-ITyergQHaGq?rs=1&pid=ImgDetMain" alt="Android" width="45">
                 <span>Download for Android</span>
             </a>
-            <a href="#" class="download-button apple">
+             <a href="https://apps.apple.com/in/app/rhyno-rides/id6751113418" 
+           target="_blank" class="download-button apple">
                 <img src="https://th.bing.com/th/id/OIP.pW0TOZyl_OZMIuo5HjUsyQHaIf?rs=1&pid=ImgDetMain" alt="Apple" width="35">
                 <span>Download for Apple</span>
             </a>
