--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@ Explore more details below and see why it’s the perfect entry into the Rhyno f
                 </nav>
             </div>
             <div class="product-card">
-                <img class="vehicle-image" src="bike.jpg" alt="Vehicle 2" id="vehicle2_image">
+                <img class="vehicle-image" src="golden.png" alt="Vehicle 2" id="vehicle2_image">
                 <h4></h4>
                 <h3>Rhyno SE03</h3>
                 <p>Step into a more powerful and thrilling riding experience with the Rhyno SE03.
