--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                 </li>
                 <li><a href="#contact">Contact Us</a></li>
                 <li><a href="Pre-book Now.html">Pre-book Now</a></li>
-                <li><a href="https://www.instagram.com/rhyno.in?igsh=NGhpejZoMGx5YXN0" target="_blank"><img src="https://clipartcraft.com/images/instagram-logo-transparent-background-2.png" alt="Instagram" style="width: 20px; height: auto;"></a></li>
+                <li><a href="https://www.instagram.com/rhyno.ev/?hl=en" target="_blank"><img src="https://clipartcraft.com/images/instagram-logo-transparent-background-2.png" alt="Instagram" style="width: 20px; height: auto;"></a></li>
                 <li><a href="https://www.linkedin.com/company/rhyno-wheels/" target="_blank"><img src="https://th.bing.com/th/id/R.a330e248626552a23af35e5c46526234?rik=DZhkgnpER0YViQ&riu=http%3a%2f%2fpngimg.com%2fuploads%2flinkedIn%2flinkedIn_PNG8.png&ehk=4bFzIDABrAypqOis7809R99fdbUW93GC4XfvnNxZfdA%3d&risl=&pid=ImgRaw&r=0" alt="LinkedIn" style="width: 20px; height: auto;"></a></li>
             </ul>
         </nav>
